--- a/IntroductionToPython/01.5-ProblemSolvingByProgramming.ipynb
+++ b/IntroductionToPython/01.5-ProblemSolvingByProgramming.ipynb
@@ -104,6 +104,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c35a98ca",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "As we solve problems with computer programs, our first step is to analyze the problem and find a generalizable algorithm to solve that problem.  From that algorithm, we then write a computer program that implements that algorithm to solve the problem. The algorithms we write may include:\n",
+    "- sequences of steps\n",
+    "- repetitions/loops of steps\n",
+    "- decisions as to which series of steps should be executed.\n",
+    "\n",
+    "As we document our algorithms, the product should be in this format:\n",
+    "```\n",
+    "Algorithm Name\n",
+    "Inputs\n",
+    "Outputs\n",
+    "Pseudocode (description of the steps to solve the problem)\n",
+    "```\n",
+    "\n",
+    "![](images/prob_algo_prog.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aaf33e1f",
    "metadata": {},
    "source": [
@@ -140,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
