--- a/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
+++ b/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
@@ -14,7 +14,7 @@
     "![Legos](images/lego_bricks.jpg)\n",
     "<sub><sup>Source: https://commons.wikimedia.org/wiki/File:Lego_bricks.jpg</sup></sub>\n",
     "\n",
-    "These bricks come in a large number of shapes, sizes, and colors.  Anyone can quickly start combining them together and novices can produce complex models while following instructions.  However, Lego master builders can produce truly novel models. Part of how they accomplish these builds is by having a deep understanding of how all of the different pieces can work together. They also spend a significant amount of time planning out their builds - just as we do when we document the algorithmic approach in the first four steps of the \"Seven Steps\".\n",
+    "These bricks come in a large number of shapes, sizes, and colors.  Anyone can quickly start combining them together and novices can produce complex models while following instructions.  However, Lego master builders can produce truly novel models. They accomplish these builds through a deep understanding of how all of the different pieces can work together. They also spend a significant amount of time planning out their builds - just as we do when we document the algorithmic approach in the first four steps of the \"Seven Steps\".\n",
     "\n",
     "Similarly, to become a proficient programmer, you will need to learn a core set of concepts (building blocks). These concepts are largely universal to many different progamming languages, they just vary with slight differences in syntax.  (Syntax are the rules defining the structure of a computer language.)\n",
     "\n",
@@ -41,7 +41,9 @@
     "\n",
     "Many other programming langauges have the concept of a primitive type, which simply contains a particular value.\n",
     "\n",
-    "Every object has a particular type that it is associated with.  That type determines what state (information) an object can know as well as what methods can be be called on that object."
+    "Every object has a particular type that it is associated with.  That type determines what state (information) an object can know as well as what methods can be be called on that object.\n",
+    "\n",
+    "Practically, objects help us represent something. As we'll see in the next section, this can be numeric values and text.  Objects can also be more complicated data collections - such as a list of items. In later notebooks, we learn how to build our own object types (classes) to provide abstractions (models) of the world we are trying to represent in our programs."
    ]
   },
   {
@@ -96,7 +98,7 @@
    "source": [
     "## Variables\n",
     "\n",
-    "Variables are a named piece of the computer's memory that can hold a particular object. Technically, variables just refer to that memory location as their value.  In a more abstract sense, we can view variables in Python as places to store information/data.\n",
+    "Variables are a named piece of the computer's memory that can hold a particular object. Technically, variables just refer to that memory location as their value.  In a more abstract sense, we can view variables in Python as places to store information/data of a particular type.\n",
     "\n",
     "In this code block, we declare three variables:"
    ]
@@ -118,9 +120,12 @@
    "id": "2b7d0e1b-e06a-4597-a6fa-5156b59a9eee",
    "metadata": {},
    "source": [
-    "x holds an integer value, pi holds a holds a floating point value, and message holds a text string.  The equals sign('=') specifies an _assignment statement_.\n",
+    "x holds an integer value, pi holds a holds a floating point value, and message holds a text string.  The equals sign('=') specifies an _assignment statement_.  You should read these statements as\n",
+    "- set _x_ to the integer 6\n",
+    "- set _p_ to the float 3.14159\n",
+    "- set _message_ the the string \"Hello World!\"\n",
     "\n",
-    "Those above statements created three variables - x, pi, and message - and assigned to them the value on the right side of the statement. \n",
+    "Those above statements created three variables - x, pi, and message - and assigned to them the value on the right side of the statement. These values on the right hand side are objects of their respective types (int, float, and string)\n",
     "\n",
     "Unlike equations you may be used to solving in algebra or other advanced mathematics, programming languages typically do not have the capability to solve the equation even though it may appear capable of performing.  Instead, the right side of the equals sign is evaluated and then the result (an 'rvalue') is assigned to a variable (an 'lvalue') on the left side of the equation.\n",
     "\n",
@@ -437,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
