--- a/IntroductionToPython/03-Boolean,Numbers,Operations.ipynb
+++ b/IntroductionToPython/03-Boolean,Numbers,Operations.ipynb
@@ -150,9 +150,11 @@
     "### Integer Bases\n",
     "Integers are generally represented in programs as base 10 (decimal) numbers.  The *base* is the number of digits that a system of counting uses to represent numbers.  \n",
     "\n",
-    "Behind the scenes, computers utilize sequences of bits (zeros and ones) to represent values.  As humans, we rely upon abstractions to make sense of those sequences.  There are three base representations that are often used within computer science and you may use or see these representations in your code or elsewhere.\n",
+    "Behind the scenes, computers utilize sequences of bits (zeros and ones) to represent values - even for items other than integers.  As humans, we rely upon abstractions to make sense of those sequences -whether its number, text, images, videos, sound, etc.  \n",
     "\n",
-    "For Python, we can express literal integers in the following 3 basis in addition to decimal by using specific prefixes:\n",
+    "For integers, besides decimal, three base representations are often used within computer programs: binary, octal, and hexadecimal.\n",
+    "\n",
+    "For Python, we can express literal integers in these three bases in addition to decimal by using specific prefixes:\n",
     "- 0b or 0B for *binary* (base 2).  Digits: 0, 1\n",
     "- 0o or 0O for *octal* (base 8).  Digits: 0,1,2,3,4,5,6,7\n",
     "- 0x or 0X for *hexadecimal* (base 16).  Often this is shortened to \"hex\".  Digits: 0,1,2,3,4,5,6,7,8,9,a,b,c,d,e,f\n",
@@ -223,32 +225,6 @@
     "print(bin(x))\n",
     "print(oct(x))\n",
     "print(hex(x))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4d626b45",
-   "metadata": {},
-   "source": [
-    "And if you are a fan of Andy Weir's [Project Hail Mary](https://www.andyweirauthor.com/books/project-hail-mary-hc/project-hail-mary-el), you can even use base-6 (senary) numbers:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c7e87d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "int (\"42\",6)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0e6bfe88",
-   "metadata": {},
-   "source": [
-    "Somewhat unbelievably, Python does not offer a built in function to convert integer values to adhoc bases beyond 2,8, and 16.  We'll leave writing that function as an exercise for the reader in a later notebook."
    ]
   },
   {
@@ -407,7 +383,8 @@
     "2. Exponent\n",
     "3. Multiplication or division\n",
     "4. Addition or subtraction \n",
-    "If there's any confusion, use parenthesis to make your code readable."
+    "\n",
+    "If there's any confusion, use parenthesis to make your code readable.  Confusing expressions are for Facebook arguments, not computer programs that have to be maintained."
    ]
   },
   {
@@ -447,7 +424,7 @@
    "source": [
     "### Example: Temperature conversion\n",
     "\n",
-    "Quite often, we'll use formula to carry out special operations such as converting Fahrenheit numbers to Celsius.\n",
+    "Quite often, we'll use a formula to carry out special operations such as converting Fahrenheit numbers to Celsius.\n",
     "$ (F - 32) * 5/9 = C $\n",
     "\n",
     "However, in Python and other computing languages, assignments are made to a variable on the right side of equation."
@@ -482,7 +459,7 @@
     "\n",
     "For example: `print(\"4 + 4 - 4 - 4:\", 4 + 4 - 4 - 4)` prints `4 + 4 - 4 - 4: 0`\n",
     "\n",
-    "How many numbers can you produce?  Try putting multiple print statements in the cell below."
+    "How many numbers can you produce?  TPut additional print statements in the cell below."
    ]
   },
   {
@@ -492,7 +469,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"4 + 4 - 4 - 4:\", 4 + 4 - 4 - 4)"
+    "print(\"4 + 4 - 4 - 4:\", 4 + 4 - 4 - 4)\n",
+    "print(\"4 // 4 - 4 + 4:\", 4 // 4 - 4 + 4)\n"
    ]
   },
   {
@@ -670,7 +648,7 @@
     "As with most other programming languages, Python uses IEEE Standard 754-2008 for floating point representation and arithmetic\n",
     "[IEEE](https://ieeexplore.ieee.org/document/4610935) | [Duke](https://ieeexplore-ieee-org.proxy.lib.duke.edu/document/4610935) | [NCSU](https://ieeexplore-ieee-org.prox.lib.ncsu.edu/document/4610935).\n",
     "\n",
-    "Technically, this is derived from Python being implemented in C.  The Python tutorial discusses some of the [issues and limitations of float point arithmetic](https://docs.python.org/3/tutorial/floatingpoint.html).\n",
+    "Technically, this is derived from Python being implemented in C.  The Python tutorial discusses some of the [issues and limitations of float point arithmetic](https://docs.python.org/3/tutorial/floatingpoint.html).  As discussed with integers, the underlying numbers behind the representation are binary. This means that only fractions that involve powers of 2 are represented exactly. Other fractions produce infinitely repeating significands.\n",
     "\n",
     "\n",
     "From a financial technical perspective, it's imperative that we use exact representations for our numbers. Python provides the [decimal](https://docs.python.org/3/library/decimal.html) class that we can use in our financial applications that we build. We demonstrate a basic usage of this class below and will have a separate module covering this in more detail.\n",
@@ -756,6 +734,102 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c1ce69f1",
+   "metadata": {},
+   "source": [
+    "`int()` also provide an optional argument to specify the base of the number to convert."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54ea65ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = int(\"110\",2)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91904f9a",
+   "metadata": {},
+   "source": [
+    "And if you are a fan of Andy Weir's [Project Hail Mary](https://www.andyweirauthor.com/books/project-hail-mary-hc/project-hail-mary-el), you can even use base-6 (senary) numbers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e06b1fa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int (\"42\",6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79ec1407",
+   "metadata": {},
+   "source": [
+    "Somewhat unbelievably, Python does not offer a built in function to convert integer values to strings with adhoc bases besides 2,8, and 16.  We'll leave writing that function as an exercise for the reader in a later notebook."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d49f2512",
+   "metadata": {},
+   "source": [
+    "Unlike integer literals, with string conversions, integer values can start with leading zeros. This is possible because the string representations for the `int()` function do not include base prefix such as `0x0F` or `0b01`. As such the parsing is more straight forward since bases have to be explicitly given as another function argument (or by default, in the case of base 10)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4ab47a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = int(\"0024\")\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0321df6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the following will produce a \"ValueError\" - bases must be explicitly provided if not decimal/base 10\n",
+    "x = int(\"0x0F\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62102839",
+   "metadata": {},
+   "source": [
+    "Python does allow for the base prefixes (`0b`,`0o`,`0x`) to optionally be used if the appropriate base is supplied."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5e3c35b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = int(\"0F\",16)\n",
+    "print(x)\n",
+    "x = int(\"0x0F\",16)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d37f95c6",
    "metadata": {},
    "source": [
@@ -802,7 +876,7 @@
    "source": [
     "## Minimum and Maximum values\n",
     "\n",
-    "Theoretically, there is no longer any minimum or maximum values for integers within Python 3.  Python 2, which has been sunset, used 32-bit or 64-bit representations for integers and did have limits.  Practically, there is a limit as to how large the interpreter can handle based upon the CPU speed and memory for the computer running the Python interpreter."
+    "Theoretically, Python 3 no longer has any minimum or maximum values for integers.  Python 2, which has been sunset, used 32-bit or 64-bit representations for integers and did have limits.  Practically, there is a limit as to how large integers can be for the interpreter to handle based upon the CPU speed and memory."
    ]
   },
   {
@@ -822,7 +896,7 @@
    "id": "11c65a40",
    "metadata": {},
    "source": [
-    "However, for floating point numbers, python does have upper and lower limits. You can see those limits by executing the following block:"
+    "However, for floating point numbers, Python does have upper and lower limits. You can see those limits by executing the following block:"
    ]
   },
   {
@@ -896,41 +970,26 @@
    "id": "1c4fe616",
    "metadata": {},
    "source": [
-    "## Review Questions\n",
-    "1. Evaluate these type conversions to Boolean:\n",
-    "    1. bool(10)\n",
-    "    2. bool(0.0)\n",
-    "    3. bool(-124)\n",
-    "    3. bool(\"Hello\")\n",
-    "    4. bool(\"\")\n",
-    "2. Are the following valid integer values? (answer yes/no)\n",
-    "   1. 16\n",
-    "   2. 016\n",
-    "   3. 0xGA\n",
-    "   4. 0b100\n",
-    "   5. 0X1A\n",
-    "3. Are the following valid floating point vlaues (answer yes/no)\n",
-    "   1. 05.01\n",
-    "   2. 6e0.5\n",
-    "   3. 5.123e-10\n",
-    "4. What is the type of this expression?   5 + 2 + 34 + 4/2\n",
-    "5. What is the type of this expression?  5+ 8//2\n",
-    "6. Write python code to convert the 100 degrees Celsuis to Fahrenheit.\n",
-    "7. Lookup the formula for [periodic compounding](https://en.wikipedia.org/wiki/Compound_interest#Periodic_compounding). Write a snippet of python code that you can use the set the variables to apply the compounding formula.  This should be similar to the Fahrenheit conversion above, but you just have a few more variables.  You should have the following variables with P, r, n, and t where \n",
+    "## Exercises\n",
+    "1. Write python code to convert the 100 degrees Celsuis to Fahrenheit.\n",
+    "2. An internet coffee shop sells coffee for \\$12.85 per pound.  The cost of shipping is \\$3.25 per pound plus a flat\n",
+    "   handling fee of \\$2.50 per order.  Using a variable of `coffee_lbs` write a python statement that will compute the order    cost and assign to a variable of `cost`.  Then print that variable to the console.\n",
+    "3. Lookup the formula for [periodic compounding](https://en.wikipedia.org/wiki/Compound_interest#Periodic_compounding). Write a snippet of python code that you can use the set the variables to apply the compounding formula.  This should be similar to the Fahrenheit conversion above, but you just have a few more variables.  You should have the following variables with P, r, n, and t where \n",
     "    - A is the final amount\n",
     "    - P is the original principal sum\n",
     "    - r is the nominal annual interest rate\n",
     "    - n is the compounding frequency\n",
     "    - t is the overall length of time the interest is applied (expressed using the same time units as r, usually years).\n",
-    "8. Convert 45.76 to a integer value\n",
-    "9. How would you find the additional information for decimal class(type) within Python?  \n",
-    "10. How would you find the additional information for decimal class(type) on the web?  "
+    "\n",
+    "4. How would you find the additional information for decimal class(type) within Python?  \n",
+    "5. How would you find the additional information for decimal class(type) on the web?  \n",
+    "Note: Within Jupyter notebooks, we can also add `?` after variable or type name to get help. Try in cell below:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e687af3",
+   "id": "af66934a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -952,7 +1011,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
