--- a/IntroductionToPython/05-Control.ipynb
+++ b/IntroductionToPython/05-Control.ipynb
@@ -6,7 +6,13 @@
    "metadata": {},
    "source": [
     "# Control Statements\n",
-    "So far, we have seen some basic programs and uses of data, but we have not had to make any decisions to decide what code to execute or to repeat the execution of certain lines of code.\n",
+    "So far, we have seen some basic programs and uses of data, but we have not had to make any decisions to decide what code to execute or to repeat the execution of certain lines of code. Control statements allow us to alter a program's behavior based upon different conditions within the data.\n",
+    "\n",
+    "In real-life, we run across many different situations where we choose different behavior based upon some condition:\n",
+    "- What to wear based upon the weather\n",
+    "- When to wake up and go to sleep - based upon the time of day\n",
+    "- Converting values into different types - for a given numeric grade, what's the equivalent letter grade\n",
+    "- Restrictions on who can drive or drink. (and it better not be both at the same time!)\n",
     "\n",
     "In this notebook, we will see how to use an `if` statement to execute different blocks of based upon some a conditional expression that evaluates to a Boolean (`True` or `False`)."
    ]
@@ -580,6 +586,53 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5c689369",
+   "metadata": {},
+   "source": [
+    "## Variables Revisited\n",
+    "Think of variables as values with names; those names describe what those values represent.\n",
+    "\n",
+    "As we use variables within our Python programs, there are three main ways we use them.\n",
+    "1. To declare and set a value to the variable. \n",
+    "2. To assign the the variable to a new value (object)\n",
+    "3. Use the variable - whether in an expression or outputting the value in same fashion\n",
+    "\n",
+    "As we declare a variable, remember that it's name must a legal identifier - must start with a letter or an underscore.  The variable name only contain letters, numbers, and underscores.  The variable name can not be one of Python's reserved words.  Before we use a variable, we must declare it first and assign some value to it.\n",
+    "\n",
+    "To assign a value to a variable, we use an assignment operator:\n",
+    "<pre>\n",
+    "a = 45 * 10\n",
+    "</pre>\n",
+    "As you read code like that, you should see it as \"set a to the value of 45 times 10\" or \"a is assigned <i>expression</i>.\n",
+    "\n",
+    "The first time a value is assigned to a variable is also known as initializing the variable.\n",
+    "\n",
+    "Once we have assigned a value/object to a variable, we can then use that value:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffbaec4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 45 * 10;\n",
+    "print(a)\n",
+    "b = a // 30;\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cbb54f0",
+   "metadata": {},
+   "source": [
+    "Unlike many other programming languages, Python is dynamically types.  As such, we can change the type of a variable by assigning different values(objects) to it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2667f27f",
    "metadata": {},
    "source": [
@@ -652,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
