--- a/IntroductionToPython/06-Functions.ipynb
+++ b/IntroductionToPython/06-Functions.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "## Defining\n",
-    "A function is defined with the keyword `def`, followed by it's name, a parameter defined within parenthesis, a colon, and then an indented code block.\n",
+    "A function is defined with the keyword `def`, followed by its name, zero or more parameters defined within parenthesis, a colon, and then an indented code block.\n",
     "\n",
     "Calling a user-defined function is the same as calling a built-in function - simply use the name followed by a parenthesis enclosing any arguments."
    ]
@@ -560,22 +560,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62931265",
+   "id": "d73b6f42",
    "metadata": {},
    "source": [
     "## Case Study: Revisiting the System Investment Calculator\n",
-    "- push into function\n",
-    "- separation\n",
-    "- single responsibility\n"
+    "\n",
+    "Now let's go back to the process for creating a systematic investment plan (SIP) calculator as presented in a prior notebook. A SIP is an investment product offered by many mutual fund companies. Investors put a fixed amount of money into the SIP periodically (e.g., monthly) to help promote financial discipline as well as a form of dollar cost averaging.\n",
+    "\n",
+    "$ FV = P \\times \\dfrac{(1+i)^n - 1}{i} \\times (1 +i) $  \n",
+    "\n",
+    "- $FV$ is the future value\n",
+    "- $P$ is the amount invested at the start of every payment interval\n",
+    "- $i$ is the periodic interest rate; for a monthly payment, take the (Annual Rate)/12\n",
+    "- $n$ is the number of payments\n",
+    "\n",
+    "Now, let's create a function to compute this value.  The function needs to have three arguments - $P$, $i$, and $n$.  The function then returns the future value of the investment.  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27f3374c",
+   "id": "a73fff9a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def compute_sip_future_value(payment, periodic_interest_rate, num_payments):\n",
+    "    return payment * \\\n",
+    "           ((1 + periodic_interest_rate)**num_payments)/periodic_interest_rate *\\\n",
+    "           (1 + periodic_interest_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b092a259",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# invest $100 monthly for 30 years at 10% interest\n",
+    "compute_sip_future_value(100, .10/12,30*12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62931265",
+   "metadata": {},
+   "source": [
+    "Couple notes:\n",
+    "1. The function only computes and returns the future value. The function has no responsibility to get the input parameters or display the results.  With computer programming / software development, this is known as the [single-responsibility principle]\n",
+    "(https://en.wikipedia.org/wiki/Single-responsibility_principle).\n",
+    "2. By placing this capability into a function, we've now provided an easy-to-use abstraction of computing future values for ourselves."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -650,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
