--- a/IntroductionToPython/08-FormattingStrings.ipynb
+++ b/IntroductionToPython/08-FormattingStrings.ipynb
@@ -176,6 +176,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cddc6849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class Receipt {\n",
+    "public static void main(String[] args) {\n",
+    "// Calculate total owed, assuming 8% tax // and 20% tip\n",
+    "System.out.print(\"Subtotal: \"); \n",
+    "System.out.println(38 + 40 + 30); \n",
+    "System.out.print(\"Tax: \");\n",
+    "System.out.println((38 + 40 + 30) * .08); \n",
+    "System.out.print(\"Tip: \");\n",
+    "System.out.println((38 + 40 + 30) * .2);\n",
+    "System.out.print(\"Total: \"); \n",
+    "System.out.println(38 + 40 + 30 +\n",
+    "(38 + 40 + 30) * .08 + (38 + 40 + 30) * .2);\n",
+    "\n",
+    "} }\n",
+    "\n",
+    "\n",
+    "Variable for subtotal, which is used in calcu- lation of tax, tip, and total\n",
+    "• Variable for tax, which is used in calculation of total\n",
+    "• Variable for tip, which is used in calculation of total\n",
+    "• Variable for total\n",
+    "• All variables are used for output\n",
+    "- function\n",
+    "\n",
+    "\n",
+    "public class Receipt {\n",
+    "public static void main(String[] args) {\n",
+    "// Calculate total owed, assuming 8% tax // and 20% tip\n",
+    "int subtotal = 38 + 40 + 30;\n",
+    "double tax = subtotal * .08;\n",
+    "double tip = subtotal * .2;\n",
+    "double total = subtotal + tax + tip; System.out.println(\"Subtotal: \" + subtotal); System.out.println(\"Tax: \" + tax); System.out.println(\"Tip: \" + tip);\n",
+    "System.out.println(\"Total: \" + total); }\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "511526ad",
    "metadata": {},
@@ -229,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
