--- a/IntroductionToPython/09-Lists.ipynb
+++ b/IntroductionToPython/09-Lists.ipynb
@@ -218,9 +218,9 @@
    "source": [
     "## Removing from a list\n",
     "\n",
-    "_list_ `.pop()` removes an item from the end of the list, returning that value\n",
-    "_list_ `.popleft()` removes an item from the start of the list, return that value\n",
-    "_list_ `.remove(index)` removes an item at the specified index and returns "
+    "* <code><i>list</i>.pop()</code> removes an item from the end of the list, returning that value\n",
+    "* <code><i>list</i>.popleft()</code> removes an item from the start of the list, returning that value\n",
+    "* <code><i>list</i>.remove(<i>index</i>)</code> removes an item at the specified index and returns that value"
    ]
   },
   {
@@ -719,7 +719,7 @@
    "metadata": {},
    "source": [
     "## Exercises\n",
-    "1. Write a short program that reads in a sentence from a user.  Then create a list of words (punctuation can be included as part of the words) by separating the words/characters by whitespace.  Then reverse the list. Finally, join the list back together into a single string with words separated by a colon `:` and print the resulting string."
+    "1. Write a short program that reads in a sentence from a user.  Then create a list of words (punctuation can be included as part of the words) by separating the words/characters by whitespace.  Then reverse the list. Finally, join the list back together into a single string with words separated by a colon `:` and print the resulting string.\n"
    ]
   },
   {
@@ -778,7 +778,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
