--- a/IntroductionToPython/11-Iteration.ipynb
+++ b/IntroductionToPython/11-Iteration.ipynb
@@ -864,6 +864,7 @@
    "metadata": {},
    "source": [
     "## Exercises\n",
+    "1. Write a function greaterThanX that takes two parameters: a list and a number.  The function should return a new list consisting of any entries in the list greater than the number.  Assume all entries in the list are numbers.\n",
     "1. Given this list of closing stock prices, create functions to compute the mean, median, and standard deviation.  Assume that we have a sample, but you can also write your function to make this an optional flag.\n",
     "```\n",
     "stock_prices = [ 123.75, 124.38, 121.78, 123.24, 122.41, 121.78, 127.88, 127.81, 128.70, 131.88]\n",
@@ -926,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
