--- a/IntroductionToPython/17-Validation,ExceptionsAndErrorHandling.ipynb
+++ b/IntroductionToPython/17-Validation,ExceptionsAndErrorHandling.ipynb
@@ -58,7 +58,7 @@
     "    <p> Two potentially dangerous built-in functions are <code>eval()</code> and <code>exec()</code>.\n",
     "        <code>eval()</code> evaluates a string assume it's an expression. Remember - a function call is an\n",
     "        expression!. <code>exec()</code> executes the contents of the string as if it represents one or \n",
-    "        more Python statements.  While, legitimate use cases exist for both of theses functions, extreme care\n",
+    "        more Python statements.  While legitimate use cases exist for both of theses functions, extreme care\n",
     "        taken to ensure any string values passed to these functions are safe to execute.\n",
     "    <p>As an example, create a code cell and run the following:\n",
     "    <pre>eval('exec(\"import os; print(os.listdir(\\'.\\'))\")')\n",
@@ -206,11 +206,13 @@
    "id": "7508e11d",
    "metadata": {},
    "source": [
-    "Another possibility covered in a later notebook is to use a regular expression to see if the string matches a particular pattern. The regular expression `^[-+]?[0-9]+$` could be used as a pattern to check for integer values. Here's a brief description as to how the expression works:\n",
+    "Another possibility covered in a later notebook is to use a regular expression. Through a powerful notational grammar, regular expressions can find both simple and complex patterns in text.\n",
+    "\n",
+    "For this situation (to test if a string can be converted to an integer), we will use the regular expression `^[-+]?[\\d]+$`. Here's a brief description as to how the expression works:\n",
     "- `^` means to match the start of the string\n",
     "- `[+-]` is a character class consisting of either the plus `+` sign or the minus `-` sign.\n",
     "- `?` makes that previous character optional\n",
-    "- `[0-9]` means any character from 0 to 9.  As digits are consecutively defined in Unicode, this translates to 0,1,2,3,4,5,6,7,8,9\n",
+    "- `[\\d]` matches any numeric decimal character (similar to `isdecimal()`.  This includes the characters from 0 to 9 as well as those characters for other language writing systems.\n",
     "- `+` means that previous character (or any member of the character class [0-9] must be present one or more times. i.e., at least once \n",
     "- `$` means to match the end of the string\n",
     "\n",
@@ -228,7 +230,7 @@
    "source": [
     "import re\n",
     "for s in test_strings:\n",
-    "    print(\"{:>10}\".format(s), bool(re.match(r\"^[-+]?[0-9]+$\",s)))"
+    "    print(\"{:>10}\".format(s), bool(re.match(r\"^[-+]?[\\d]+$\",s)))"
    ]
   },
   {
@@ -240,14 +242,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bfd6400",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "b56a04ee",
    "metadata": {},
@@ -256,14 +250,6 @@
     "An exception is an error that occurs as a program executes, causing the normal execution sequence to stop processing and for control to pass to the nearest block designated to handle that type of an error. By default, if no such handle is present, the Python interpreter will print a stack trace and stop the program.\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64a0821a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -290,31 +276,282 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2a6ed70",
+   "id": "0b7f0608",
    "metadata": {},
    "source": [
     "With no other details on the `except` line, that `except` block is a catch all for any error type.\n",
     "\n",
-    "except exceptType as variable_name\n",
+    "Now, let's revisit the grade average example. We need to determine what type of action to take when the user enters a string that is not an integer.  Ideally, we want the user to be able to recover from any inadvertent mistakes.  We also need a mechanism to allow the user to indicate they are done entering data - typically accomplished through a [sentinel value](https://en.wikipedia.org/wiki/Sentinel_value).  \n",
     "\n",
-    "can have mulitple except clauses.\n",
+    "Rather than starting from our existing, let's revisit the pseudocode for this process:\n",
+    "<i><pre>\n",
+    "    set running total to 0\n",
+    "    set number of grade entries to 0\n",
+    "    while the user has more grade entries:\n",
+    "        read next grade\n",
+    "        add grade to running total\n",
+    "        increment number of entries by 1\n",
+    "    if there's at least one grade entry\n",
+    "        compute and display average\n",
+    "    otherwise\n",
+    "        state no grades entered\n",
+    "</pre></i>\n",
+    "For most of this we have a straight-forward conversion, except for the loop.  Let's expand that -\n",
+    "<i><pre>\n",
+    "    ...\n",
+    "    while true:\n",
+    "        read next grade\n",
+    "        if sentinel entered, exit loop\n",
+    "        if valid grade (an integer)\n",
+    "            add grade to running total\n",
+    "            increment number of entries by 1\n",
+    "        else \n",
+    "            display error message\n",
+    "    ...\n",
+    "</pre></i>\n",
     "\n",
-    "can also have multiple exceptions in one except block\n",
+    "Now, converting this to code.  (Note: since we are changing our logic, rather than relying upon a negative integer for the sentinel, let's use the string \"q\".)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8b343db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = 0\n",
+    "num_entries = 0\n",
     "\n",
-    "Can query the variable for more details\n",
+    "while True:\n",
+    "    grade = input(\"Enter a grade('q to quit'): \")\n",
+    "    if grade == 'q':\n",
+    "        break\n",
+    "    try:\n",
+    "        grade = int(grade)\n",
+    "        total += grade\n",
+    "        num_entries += 1\n",
+    "    except:\n",
+    "        print(\"Invalid grade entered: \",grade)\n",
     "\n",
-    "else clause\n",
+    "if num_entries > 0:\n",
+    "    print(\"Average:\",total/num_entries)\n",
+    "else:\n",
+    "    print(\"no grades entered\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dad4a11",
+   "metadata": {},
+   "source": [
+    "### Handle by Type\n",
     "\n",
-    "finally clause\n",
+    "The `except` clause with just the keyword itself catches all errors by default.  In certain circumstances, our code may only want to handle a specific error, making it the caller's responsibility to handle (or not!) any other others that may exist.\n",
     "\n",
-    "raising exception\n",
+    "For example, what if our grades where contained in a file, one per line and we had this code to compute averages:\n",
+    "<pre>\n",
+    "with open(\"test.txt\") as f:\n",
+    "    total = 0\n",
+    "    num_entries = 0\n",
+    "    for line in f:\n",
+    "        total += int(line)\n",
+    "        num_entries += 1\n",
+    "    print(total/num_entries)\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1d3b931",
+   "metadata": {},
+   "source": [
+    "What errors can possibly occur?\n",
+    "- File does not exist\n",
+    "- File uses a different encoding\n",
+    "- File contains data other than integers\n",
+    "- File is empty\n",
     "\n",
-    "can create our own exceptions (getting ahead our ourselves before we discuss creating custom classes)\n",
+    "Now, we need to determine how do we want to handle these different errors.\n",
     "\n",
-    "stack traces - need to read\n",
+    "Python provides the capability to handle a specific error by specifying the specific error type after the `except`.  [View Python's Built-in Exceptions](https://docs.python.org/3/library/exceptions.html)\n",
     "\n",
+    "As you can see below, Python allows for multiple `except` blocks for each try.  Once a specific error has been handled for a `try`, the remaining `except` blocks are skipped. Because of this logic, it is also necessary to list `except` blocks in order of most specific to most generally.\n",
     "\n",
-    "best practices on exceptions\n",
+    "Python allows us to specify a variable name after the exception. By being able to reference the exception object, we can query the exception's state (it is just an object after all) to get additional details.\n",
+    "\n",
+    "The following code block contains several errors.  While the comments provide the corrections, you should run the code first.  Then fix the associated error. Repeat until the average is printed.   Finally, remove the inner most try/except handling to see how the code reacts.  What occurred?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf66721b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"data/grade.txt\"       # Correct filename is data/grades.txt\n",
+    "try:\n",
+    "    with open(file_name) as f:    # Variable name has not been defined\n",
+    "        total = 0\n",
+    "        num_entries = 0\n",
+    "        line_count = 0\n",
+    "        for line in f:\n",
+    "            line_count += 1\n",
+    "            try:\n",
+    "                total += int(line)\n",
+    "                num_entries += 1\n",
+    "            except ValueError:\n",
+    "                print(\"Bad integer value on line {:d}: {:s}\".format(line_count,line))\n",
+    "        print(\"Average: {:.2f}\".format(total/num_entries))\n",
+    "except FileNotFoundError as file_error:\n",
+    "    # show additional attributes for \"FileNotFoundError\"\n",
+    "    print(file_error.filename)\n",
+    "    print(file_error.errno)\n",
+    "    print(file_error.strerror)\n",
+    "    print(\"Unable to find:\", filename)\n",
+    "except Exception as err:\n",
+    "    print(\"Unknown error:\", err)    # this prints the excpetion's default error message\n",
+    "    print(\"Error Type:\", type(err))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f8ef193",
+   "metadata": {},
+   "source": [
+    "Python allows for multiple exceptions to be handled with the same except block:\n",
+    "<pre>\n",
+    "filename = \"data/grade.txt\"       # Correct filename is data/grades.txt\n",
+    "try:\n",
+    "    ...\n",
+    "except (FileNotFoundError, IOError) as os_error:\n",
+    "    # Handle OS related errors in this block\n",
+    "    ...\n",
+    "except Exception as err:\n",
+    "    # Handle other errors in this block\n",
+    "    ...\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90051081",
+   "metadata": {},
+   "source": [
+    "### `else` clause\n",
+    "The `try`/`except` statement can have an optional `else` clause which only executes if no exceptions were raised:\n",
+    "\n",
+    "<pre>\n",
+    "try:\n",
+    "    <i>statement</i>\n",
+    "    <i>statement</i>\n",
+    "    <i>...</i>\n",
+    "except <i>ExceptionName</i>:\n",
+    "    <i>statement</i>\n",
+    "    <i>statement</i>\n",
+    "    <i>...</i>\n",
+    "else:\n",
+    "    <i>statement</i>\n",
+    "    <i>statement</i>\n",
+    "    <i>...</i>\n",
+    "</pre>\n",
+    "\n",
+    "The `else` clause must come after the `except` clause(s)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41520885",
+   "metadata": {},
+   "source": [
+    "### `finally` clause\n",
+    "Additionally, the `try`/`except` statement can have an optional `finally` clause which excecutes the try block, the except block(s), and any `else` block. I.e., the `finally` clause executes as the last item of a `try`/`except` statement.  The purpose is to perform any necessary cleanup operations.  Code in the `finally` clause will always execute.\n",
+    "\n",
+    "<pre>\n",
+    "try:\n",
+    "    <i>statement</i>\n",
+    "    <i>statement</i>\n",
+    "    <i>...</i>\n",
+    "except <i>ExceptionName</i>:\n",
+    "    <i>statement</i>\n",
+    "    <i>statement</i>\n",
+    "    <i>...</i>\n",
+    "finally:\n",
+    "    <i>statement</i>\n",
+    "    <i>statement</i>\n",
+    "    <i>...</i>\n",
+    "</pre>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f8d86cb",
+   "metadata": {},
+   "source": [
+    "### Raising Exceptions\n",
+    "With Python, we can force a specified exception to occur through the `raise` statement:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2aed464",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raise NameError(\"code initiated exception\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebbb063b",
+   "metadata": {},
+   "source": [
+    "We can catch these exception ourselves as well as re-raise them.  We can also re-raise built-in exceptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebe729ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    raise NameError(\"code initiated exception\")\n",
+    "except NameError as ne:\n",
+    "    print(\"Our raised exception:\",ne)\n",
+    "    raise ne"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c238fa2",
+   "metadata": {},
+   "source": [
+    "### Creating our Own Exceptions\n",
+    "TODO\n",
+    "can create our own exceptions (getting ahead our ourselves before we discuss creating custom classes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4cc53d4",
+   "metadata": {},
+   "source": [
+    "### stack traces\n",
+    "TODO\n",
+    "need to reead and follow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2a6ed70",
+   "metadata": {},
+   "source": [
+    "### Exception Best Practices\n",
+    "TODO\n",
     "- add eception handling anywhere an exception might occur\n",
     "- at the very highest levle, may want one\n",
     "- within a server procesisng loop (e.g. webserver) don't show error messages to the users.  \n",
@@ -324,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66dfd0e4",
+   "id": "47ef3a7a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -336,13 +573,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "error messages\n",
+    "## error messages\n",
     "\n",
     "One of the things we do need to do is to be kind to our user community ...\n",
     "\n",
     "\n",
     "Launcher Error Cannot read properties of undefined (reading 'path')\n",
     "Error Invalid response: 400 Bad Request"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03de5399",
+   "metadata": {},
+   "source": [
+    "## Checking Parameter Values\n",
+    "\n",
+    "TODO - Reword all of the following\n",
+    "\n",
+    "We want to verify that parameter values meet pre-conditions for our method, where a pre-condition is a condition that must be true before a method executes in order to guarantee that the method can execute properly.\n",
+    "If pre-conditions are not meet, we will throw an exception, which will halt method execution and provide user with an error message.\n",
+    "Throwing an exception:\n",
+    "• Syntax Template throw <exception>;\n",
+    "• Exceptions are objects, so we must construct them throw new IllegalArgumentException(); • Can include message to the user throw new IllegalArgumentException(\"message\");\n",
+    "    \n",
+    "    \n",
+    "example radius of a circle must be >0.    "
    ]
   },
   {
@@ -380,7 +636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
