--- a/IntroductionToPython/18-Testing.ipynb
+++ b/IntroductionToPython/18-Testing.ipynb
@@ -9,7 +9,27 @@
     "\n",
     "Intro\n",
     "\n",
-    "discuss fitting into the software develpment process"
+    "discuss fitting into the software develpment process\n",
+    "\n",
+    "\n",
+    "\n",
+    "Jessica's notes:\n",
+    "What is testing?\n",
+    "• Testing is the process of finding software faults\n",
+    "– Fault: “an incorrect step, process, or data definition in a program”4\n",
+    "• Testing: “the dynamic verification of the behavior of a program on a finite set of test cases, suitably selected from the usually infinite executions domain, against the expected behavior”5\n",
+    "• Test cases uncover failure by finding where the actual behavior of a program deviates from the expected behavior.\n",
+    "• Investigation of failures uncovering faults.\n",
+    "4IEEE, “ISO/IEC 24765:2009 Systems and Software Engineering Vocabulary,” 2009.\n",
+    "5ISO/IEC TR 19759:2005 Software Engineering – Guide to the Software Engineering Body of Knowledge (SWEBOK)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "testing from another iSO standard.  I kinda of like this one becuase its more inclusive, but at the lack of specificity...\n",
+    "\n",
+    "set of activities conducted to facilitate discovery and/or evaluation of properties of one or more test items\n",
+    "https://www.iso.org/obp/ui/#iso:std:iso-iec-ieee:29119:-1:ed-1:v1:en"
    ]
   },
   {
@@ -32,6 +52,17 @@
     "\n",
     "- Catch errors as soon as possible\n",
     "- Boehm's curve\n",
+    "\n",
+    "==\n",
+    "Jessica's notes\n",
+    "Why test?\n",
+    "Testing increases confidence that your program works correctly and meets the customer requirements or expectations\n",
+    "• Better scores on assignments\n",
+    "• Save companies millions, if not billions, of dollars\n",
+    "• Maintain customer’s confidence in company\n",
+    "\n",
+    "====\n",
+    "\n",
     "\n",
     "Yes, initially, you can get away with manually testing your software as your write code.  (And in some ways, this is necessary - build a little, test that those parts work, and build some more.  Rinse, Lather, Repeat.). However, eventually you will have significant maintainability issues.\n",
     "\n",
@@ -81,7 +112,14 @@
    "id": "ea3e3223",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## what is a test case  ...\n",
+    "Test Case Information\n",
+    "• Unique Identifier\n",
+    "• Test Inputs\n",
+    "• Expected Results\n",
+    "• Actual Results"
+   ]
   },
   {
    "cell_type": "code",
@@ -126,7 +164,7 @@
    "id": "ce6dcb42",
    "metadata": {},
    "source": [
-    "Reword all of the following and bring in more\n",
+    "Reword all of the following and bring in more - testing strategy / developing test cases\n",
     "\n",
     "1. Think about size. When a test involves a collection such as a list, string, dictionary, or file, you need to do the following:\n",
     "  1. Test the empty collection.\n",
@@ -145,7 +183,111 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d8d3ab6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test Equivalence Classes\n",
+    "• Input/output space is broken into different equivalence classes\n",
+    "• Each equivalence class is tested\n",
+    "• Tests are written to include “middle” input values from each of the possible classes – One test may consider multiple equivalence classes\n",
+    "– One for each type of input/output\n",
+    "• A test focuses on one equivalence class, but other values are needed for a full test. Those other values should be ”middle” values.\n",
+    "• Helps further test requirements by considering groups of inputs/outputs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a63b99a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Test Boundary Values\n",
+    "Programmers tend to make mistakes at boundaries\n",
+    "Want to test program boundaries and values to either side of the boundary\n",
+    "\n",
+    "(smallest, largest, change from negative to positive)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "935ae525",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Testing Strategies\n",
+    "• Test Requirements\n",
+    "• Test Equivalence Classes • Test Boundary Values\n",
+    "• Test All Paths\n",
+    "• Test Exceptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "17f969ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code coverage\n",
+    "- function/method\n",
+    "- statement\n",
+    "- edge\n",
+    "- branch\n",
+    "- condition. (predicate coverage)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12186a72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "How much to test?\n",
+    "Brooks’ Rule of Thumb for Scheduling a Software Project6\n",
+    "• 1/3 design\n",
+    "• 1/6 coding\n",
+    "• 1/2 testing\n",
+    "– 1/4 component testing (unit testing) – 1/4 system testing\n",
+    "Testing Early and Often\n",
+    "• Test early: start testing as soon as parts are implemented\n",
+    "• Test often: running tests at every reasonable opportunity\n",
+    "CSC116 Lecture Notes: Dr. Jessica Young Schmidt\n",
+    "  6F. P. Brooks, Jr., The Mythical Man-Month: Essays on Software Engineering, Anniversary Edition, Boston: Addison-Wesley, 1995.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c793a15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a57d07f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d227d6ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efeb8728",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -167,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
