--- a/IntroductionToPython/20-Modules.ipynb
+++ b/IntroductionToPython/20-Modules.ipynb
@@ -8,18 +8,234 @@
     "# Modules\n",
     "With the exception of existing classes and functions that we have used, everything that we have written so far has been put within a single file.  Now, we will look at how to package our code into multiple files.\n",
     "\n",
-    "Just as functions provided an abstractions for a series of steps that performed a task, a module creates an abstraction of a group of related variables(data), functions, and classes.\n",
+    "Just as functions provided an abstractions for a series of steps that performed a task, a module creates an abstraction of a group of related variables(data), functions, and classes. Modules are key abstraction for reusing code and functionality.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9554ee4a",
+   "metadata": {},
+   "source": [
+    "## Using Modules\n",
+    "To use a module, use the following statement\n",
+    "<code>import <i>moduleName</i></code> where moduleName is the name of an existing Python file (but without the .py extension) or a directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a95666b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9774254733080276"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statistics\n",
     "\n",
-    "At the very simplest level, modules are just a text file that contains python code. \n",
+    "statistics.stdev([10,5,12,3,6,4,11,4,8,5,6,7,8,6,5,6,7])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acd5ac2d",
+   "metadata": {},
+   "source": [
+    "You can also rename a module as you import it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "34dc7b81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7733635779441584"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statistics as stat\n",
     "\n",
+    "stat.stdev([10,5,12,3,6,4,11,4,8,5,6,7,8,6,5,6,7])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7010cdb",
+   "metadata": {},
+   "source": [
+    "Why rename imported modules?\n",
+    "- duplicate names\n",
+    "- more mnemonic / following convention (Example: <code>import pandas as pd</code>\n",
+    "- minimize typing\n",
     "\n",
-    "key abstraction for reusing code and functionality\n",
+    "You can also limit what you import from a module\n",
+    "<code>from <i>moduleName</i> import <i>name</i></code>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "d8019ae7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.647058823529412"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from statistics import mean\n",
     "\n",
+    "mean([10,5,12,3,6,4,11,4,8,5,6,7,8,6,5,6,7])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8164d4f4",
+   "metadata": {},
+   "source": [
+    "To list all modules currently installed (including built-in modules):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8bfd98e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help('modules')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d05680c",
+   "metadata": {},
+   "source": [
+    "To see the help documentation for a specific module, pass it as a string to help"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d537eb5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help('numpy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f53812c",
+   "metadata": {},
+   "source": [
+    "## Packages \n",
+    "Python allows modules to be organized by subdirectories into packages. The directory names form a hierarchy of names.\n",
     "\n",
-    "pip install / githubs\n",
+    "Prior to Python 3.3, it was necessary to include a file named `__init__.py` in a directory for it to make it a Python package. Now if this file is present, it can contain initialization code.\n",
     "\n",
+    "Typically, programmers do use the terms \"modules\" and \"packages\" interchangeably."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "442dabfc",
+   "metadata": {},
+   "source": [
+    "### Installing other modules\n",
+    "The de facto way to install additional modules and packages is to use [pip](https://docs.python.org/3/installing/index.html). \n",
     "\n",
-    "\n"
+    "Technically you can use the 'pip' command to install packages: <pre>pip install <i>packageName</i></pre>.  However, the recommended approach is to use call the Python interpreter and use the module name as the command line argument:\n",
+    "<pre>\n",
+    "    python -m pip install <i>packageName</i>\n",
+    "</pre>\n",
+    "By using the `python` executable, we ensure the package is installed into an appropriate environment.\n",
+    "\n",
+    "Similarly for Jupyter Notebooks:\n",
+    "<pre>\n",
+    "    import sys\n",
+    "    !{sys.executable} -m pip install <i>packageName</i>\n",
+    "</pre>\n",
+    "For notebooks, you may have seen\n",
+    "<pre>!pip install <i>packageName</i></pre>\n",
+    "However, this will install the pacakage into the environment from which Jupyter was started, not the current environment.\n",
+    "\n",
+    "You should ensure <code>setuptools</code> and <code>wheel</code> are installed when using pip.  <code>wheel</code> can install pre-built packages into your environment if compatible. <code>setuptools</code> helps to handle the installation of other packages from source code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01a3b1d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "!{sys.executable} -m pip install setuptools wheel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "838ef17f",
+   "metadata": {},
+   "source": [
+    "### Commonly Used Modules / Packages\n",
+    "Packages that have a URL with \"python.org\" are part of the includes modules distributed with the language and do not need to be installed.  [Python Standard Library](https://docs.python.org/3/library/)\n",
+    "\n",
+    "Package Name | Description | Import | URL\n",
+    ":-----------|:----|:---|:------\n",
+    "datetime | Supplies classes to represent and manipulate date and times| dt|https://docs.python.org/3/library/datetime.html\n",
+    "json | Exposes APIs to load, parse, and write [JSON Objects](https://datatracker.ietf.org/doc/html/rfc7159.html). | |https://docs.python.org/3/library/json.html\n",
+    "math | Variety of math functions for floats and integers | | https://docs.python.org/3/library/math.html\n",
+    "matplotlib|  Comprehensive visualization library | mpl | https://matplotlib.org\n",
+    "numpy  | Foundational package for scientific computing.  Supports multidimensional arrays and matrices| np | https://numpy.org\n",
+    "pandas | Data analysis and manipulation tool. Core library to perform data science in Python | pd| https://pandas.pydata.org\n",
+    "os | Provides access to common operating system functions. | | https://docs.python.org/3/library/os.html\n",
+    "random | Implements random number generation for various distributions | |https://docs.python.org/3/library/random.html\n",
+    "scipy  | Contains algorithms for optimization, integration, interpolation, eigenvalue problems, algebraic equations, differential equations, statistics and many other classes of problems| | https://scipy.org \n",
+    "seaborn | visualizaion library built on top of matplotlib that provides attractive and informative statistical graphics |sns | https://seaborn.pydata.org\n",
+    "statistics | Provides functions to calculate common statistics || https://docs.python.org/3/library/statistics.html\n",
+    "sys | Provides access to variables and functions used by the Python interpreter | |https://docs.python.org/3/library/sys.html\n",
+    "unittest | Unit testing framework that supports test automation || https://docs.python.org/3/library/sys.html\n",
+    "\n",
+    "The \"Import\" column contains the standard rename value.\n",
+    "\n",
+    "To find modules and packages, Python searches directories in `sys.path` based upon their listed order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "046672de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "print(sys.path)"
    ]
   },
   {
@@ -27,13 +243,10 @@
    "id": "3042f3d1",
    "metadata": {},
    "source": [
-    "## Using modules\n",
-    "To use a module, use the following statement\n",
-    "<code>import <i>moduleName</i></code> where moduleName is the name of an existing Python file, but without the .py extension.\n",
+    "## Developing and using our own modules\n",
     "\n",
-    "we can also organize our modules hierarchically by directories.   \n",
     "\n",
-    "my recommendation on imports ...\n",
+    "At the very simplest level, modules are just a text file that contains python code. \n",
     "\n",
     "\n",
     "\n",
@@ -41,14 +254,6 @@
     "The __init__.py files are required to make Python treat directories containing the file as packages. This prevents directories with a common name, such as string, unintentionally hiding valid modules that occur later on the module search path. In the simplest case, __init__.py can just be an empty file, but it can also execute initialization code for the package \n",
     "\n",
     "\n",
-    "import a module as another name.\n",
-    "- duplicate names\n",
-    "- more mnemonic / following convention\n",
-    "-hate typing\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "import specific items inout our name space\n",
     "\n",
     "len(dir(__builtins__))\n",
     "\n",
@@ -73,7 +278,7 @@
     "    print (\"I am the main program\")\n",
     "else:\n",
     "    print (\"being imported\")\n",
-    "    \n"
+    "    "
    ]
   },
   {
@@ -101,16 +306,25 @@
    "id": "4cc826eb",
    "metadata": {},
    "source": [
-    "Python expects you to be a fully grown adult, everyhting I learned in kindergarten \n",
+    "\n",
+    "\n",
+    "Python expects you to be a fully grown adult\n",
+    "\n",
+    ", everyhting I learned in kindergarten \n",
     "\n",
     "Share everything.  Play fair.  Don't hit people.  Put things back where you found them.  Clean up your own mess.  Don't take things that aren't yours.\n",
     "\n",
     "by Robert Fulghum \n",
     "\n",
-    "import math\n",
-    "math.pi =2\n",
-    "from math import pi\n",
-    "pi\n",
+    "import statistics\n",
+    "\n",
+    "def bad_programmer(l):\n",
+    "    import random\n",
+    "    return random.random()\n",
+    "\n",
+    "statistics.stdev = bad_programmer\n",
+    "\n",
+    "statistics.stdev([10,5,12,3,6,4,11,4,8,5,6,7,8,6,5,6,7])\n",
     "\n",
     "\n",
     "There's only one copy of any module imported by your program, even if yo import it more thatn once.\n",
@@ -157,6 +371,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9ff94e68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Packages\n",
+    "\n",
+    "pip install / githubs\n",
+    "\n",
+    "\n",
+    "import sys\n",
+    "!{sys.executable} -m pip install -r ../requirements.txt\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b5a21f9a",
    "metadata": {},
    "outputs": [],
@@ -165,6 +396,54 @@
     "\n",
     "Create a stats module"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e05363e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "!{sys.executable} -m pip freeze    /list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a7003f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7eebe227",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "!{sys.executable} -m pydoc modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f47cb632",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(\"sklearn\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67fb1aec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -183,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
