--- a/IntroductionToPython/14-Sets.ipynb
+++ b/IntroductionToPython/14-Sets.ipynb
@@ -124,7 +124,9 @@
    "metadata": {},
    "source": [
     "## Deleting from a set\n",
-    "Use `remove()` to delete / remove an item from a set by the value.  To remove multiple items, use `difference_update()`"
+    "Use `remove()` to delete / remove an item from a set by the value. If the value does not exist, a `KeyError` is raised.  `discard()` will remove a value from a set, but not raise an error.\n",
+    "\n",
+    "To remove multiple items, use `difference_update()`"
    ]
   },
   {
@@ -500,14 +502,6 @@
     "mexico_flag_colors = set([\"green\", \"white\",\"red\"])\n",
     "mexico_flag_colors < us_flag_colors"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4c080b0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -527,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
